# xenage

./: .dockerignore  .gitignore  README.md  RULES.md  build.sh  docker-compose.integration.yml  docker-compose.yml  install.sh  pyproject.toml  tests.sh  xenage.toml
.github/scripts/: generate-xenage-release-notes.mjs  prepare-xenage-gui-version.mjs  prepare-xenage-standalone-version.mjs
.github/workflows/: build-xenage-gui.yml  build-xenage-standalone.yml
apps/xenage-gui/: README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/xenage-gui/scripts/: run-export-structures.mjs
apps/xenage-gui/src/: App.css  App.test.tsx  App.tsx  index.css
apps/xenage-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/xenage-gui/src-tauri/capabilities/: default.json
apps/xenage-gui/src-tauri/icons/: icon.icns
apps/xenage-gui/src-tauri/src/: cluster_connection.rs  main.rs  rbac_connection.rs
docker/: xenage.Dockerfile
docker/config/: cp-2.toml  cp-3.toml  runtime.toml
docs/: README.md  control-plane-api.md  events.md  gui-connection.admin.yaml  node-types.md  rbac.md  sync-nodes.md
docs/examples/rbac/: agent-runner.yaml  viewer-readonly.yaml
docs/structures/: README.md  structures_common.md  structures_resources_cluster.md  structures_resources_events_cluster.md  structures_resources_events_sync.md  structures_resources_membership.md  structures_resources_observability.md  structures_resources_rbac.md
integration_test/simple/: README.md  docker-compose.yml  test_simple_cluster.sh
integration_test/simple/artifacts/: cli-nodes-after.txt  cli-nodes-before.txt  gui-admin.yaml
landing/: Dockerfile  README.md  build.sh  deployment.yaml  package-lock.json  package.json  proxy.ts  tsconfig.tsbuildinfo
landing/app/: globals.css  layout.tsx  page.tsx  robots.ts  sitemap.ts
landing/app/components/: CtaSection.tsx  FeaturesSection.tsx  Footer.tsx  GuiSection.tsx  HeroCanvas.tsx  HeroSection.tsx  InstallSection.tsx  Navigation.tsx  PackagesSection.tsx  ProblemsSection.tsx  ScaleSection.tsx
landing/public/: install.sh
scripts/: build_standalone.py  export_structures.py
scripts/standalone/: control_plane_entrypoint.py  runtime_entrypoint.py  xenage_entrypoint.py
src/xenage/: __init__.py  cli.py  config.py  crypto.py  logging.py  serialization.py  tokens.py
structures/: __init__.py  base.py  common.py
structures/resources/: __init__.py  base.py  cluster.py  governance.py  integration.py  manifest.py  membership.py  observability.py  rbac.py  runtime.py
tests/: conftest.py  test_build_standalone.py  test_cli_init.py  test_cli_ultimate.py  test_cli_unified_entrypoint.py  test_compose_integration_scenarios.py  test_control_plane.py  test_control_plane_security.py  test_crypto.py  test_failover_scenarios.py  test_failover_sync_signature.py  test_gui_auth.py  test_gui_manifest_rbac_subtree.py  test_gui_updater_workflow.py  test_rbac_yaml_tdd.py  test_real_network_failover_rejoin.py  test_repro_sync.py  test_split_brain_recovery.py  test_standalone_updater_workflow.py  test_state_manager.py  test_sync_and_promotion.py  test_sync_failover_scenarios.py  test_tokens.py  test_transport_handlers.py
tests/integration/: test_cluster_bootstrap.sh
(+113 files in other folders)
