[package]
name = "xenage-gui"
version = "0.1.0"
description = "A Xenage GUI Application"
authors = ["Xenage Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-os = "2.0"
url = "2"

[features]
# default enables tauri's standard feature set
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
