[package]
name = "xenage-gui"
version = "0.1.0"
description = "A Xenage GUI Application"
authors = ["Xenage Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-process = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-os = "2.0"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
ed25519-dalek = "2"
getrandom = "0.2"
serde_yaml = "0.9"

[features]
# default enables tauri's standard feature set
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
